--- a/SisFiespApplication/Views/Home/Index.cshtml
+++ b/SisFiespApplication/Views/Home/Index.cshtml
@@ -216,6 +216,112 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-md-6 col-xl-12">
+                        <div class="card review-task">
+                            <div class="card-header">
+                                <div class="card-header-left">
+                                    <h5>Proximos Atendimentos</h5>
+                                </div>
+                                <div class="card-header-right">
+                                    <ul class="list-unstyled card-option">
+                                        <li><i class="icofont icofont-simple-left "></i></li>
+                                        <li><i class="icofont icofont-maximize full-card"></i></li>
+                                        <li><i class="icofont icofont-minus minimize-card"></i></li>
+                                        <li><i class="icofont icofont-refresh reload-card"></i></li>
+                                        <li><i class="icofont icofont-error close-card"></i></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card-block">
+                                <div class="table-responsive">
+                                    <table class="table table-hover">
+                                        <tbody>
+                                            <tr>
+                                                <td>
+                                                    <a href="#!"><img class="img-rounded" src="assets/images/widget/user-3.png" alt="chat-user"></a>
+                                                </td>
+                                                <td>
+                                                    <h6>Nome do aluno</h6>
+                                                    <p class="text-muted">Escola do aluno</p>
+                                                </td>
+                                                <td>
+                                                    <p class="review-date">04 Jan</p>
+                                                    <p class="">10:45 AM</p>
+                                                </td>
+                                                <td>
+                                                    <a href="#!"><i class="icofont icofont-star  f-18 text-c-blue"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-default"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-default"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-default"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-default"></i></a>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <a href="#!"><img class="img-rounded" src="assets/images/widget/user-2.png" alt="chat-user"></a>
+                                                </td>
+                                                <td>
+                                                    <h6>Josephin Doe</h6>
+                                                    <p class="text-muted">Lorem ipsum dolor sit amet</p>
+                                                </td>
+                                                <td>
+                                                    <p class="review-date">08 Jan</p>
+                                                    <p class="">1:15 PM</p>
+                                                </td>
+                                                <td>
+                                                    <a href="#!"><i class="icofont icofont-star  f-18 text-c-blue"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-c-blue"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-c-blue"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-c-blue"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-c-default"></i></a>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <a href="#!"><img class="img-rounded" src="assets/images/widget/user-3.png" alt="chat-user"></a>
+                                                </td>
+                                                <td>
+                                                    <h6>Luciano Durk</h6>
+                                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur</p>
+                                                </td>
+                                                <td>
+                                                    <p class="review-date">14 Jan</p>
+                                                    <p class="">12:25 PM</p>
+                                                </td>
+                                                <td>
+                                                    <a href="#!"><i class="icofont icofont-star  f-18 text-c-blue"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-c-blue"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-default"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-default"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-default"></i></a>
+                                                </td>
+                                            </tr>
+                                            <tr>
+                                                <td>
+                                                    <a href="#!"><img class="img-rounded" src="assets/images/widget/user-4.png" alt="chat-user"></a>
+                                                </td>
+                                                <td>
+                                                    <h6>Luciano Durk</h6>
+                                                    <p class="text-muted">Lorem ipsum amet, consectetur</p>
+                                                </td>
+                                                <td>
+                                                    <p class="review-date">04 Feb</p>
+                                                    <p class="">10:45 AM</p>
+                                                </td>
+                                                <td>
+                                                    <a href="#!"><i class="icofont icofont-star  f-18 text-c-blue"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-c-blue"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-c-blue"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-default"></i></a>
+                                                    <a href="#!"><i class="icofont icofont-star f-18 text-default"></i></a>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <!-- Client Map End -->
                 </div>
             </div>
