--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -130,6 +130,14 @@
     <!-- Max-length js -->
     <script type="text/javascript" src="~/arquivos/bootstrap-maxlength/js/bootstrap-maxlength.js"></script>
 
+    <!-- flag icon framework css -->
+    <link rel="stylesheet" type="text/css" href="~/assets/pages/flag-icon/flag-icon.min.css">
+    <!-- Menu-Search css -->
+    <link rel="stylesheet" type="text/css" href="~/assets/pages/menu-search/css/component.css">
+    <!-- Calender css -->
+    <link rel="stylesheet" type="text/css" href="~/arquivos/fullcalendar/css/fullcalendar.css">
+    <link rel="stylesheet" type="text/css" href="~/arquivos/fullcalendar/css/fullcalendar.print.css" media='print'>
+
 </head>
 
 <body>
@@ -536,7 +544,7 @@
                                     </ul>
                                 </li>
                                 <li class="">    <a asp-area="" asp-controller="Avaliacoes" asp-action="Index" id="menuAvaliacao">        <span class="pcoded-micon"><i class="icofont icofont-paper"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Avaliações</span>        <span class="pcoded-mcaret"></span>    </a></li>
-                                <li class="">    <a asp-area="" asp-controller="Agendas" asp-action="Index" id="menuAvaliacao">        <span class="pcoded-micon"><i class="icofont icofont-ui-calendar"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Agenda</span>        <span class="pcoded-mcaret"></span>    </a></li>
+                                <li class="">    <a asp-area="" asp-controller="Agenda" asp-action="Index" id="menuAvaliacao">        <span class="pcoded-micon"><i class="icofont icofont-ui-calendar"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Agenda</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                 <li class="">    <a href="retalorio.html">        <span class="pcoded-micon"><i class="icofont icofont-file-alt"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Relatórios</span>        <span class="pcoded-mcaret"></span>    </a></li>
 
                             </ul>
