Alterações nas telas de avaliação

--- a/SisFiespApplication/Views/Avaliacoes/Create.cshtml
+++ b/SisFiespApplication/Views/Avaliacoes/Create.cshtml
@@ -119,7 +119,7 @@
                                                 <div class="slide"></div>
                                             </li>
                                             <li class="nav-item">
-                                                <a class="nav-link" data-toggle="tab" href="#settings7" role="tab"><i class="icofont icofont-ui-settings"></i>Avaliação</a>
+                                                <a class="nav-link" data-toggle="tab" href="#settings7" role="tab"><i class="icofont icofont-ui-settings"></i>Configuração</a>
                                                 <div class="slide"></div>
                                             </li>
                                         </ul>
@@ -337,56 +337,27 @@
                                                         </div>
                                                         <div class="col-sm-8 user-detail">
                                                             <div class="row">
-                                                                <div class="col-sm-12 col-xl-3 m-b-30">
-                                                                    <h4 class="sub-title">Default Select</h4>
-                                                                    <select name="select" class="form-control form-control-default">
-                                                                        <option value="opt1">Select One Value Only</option>
-                                                                        <option value="opt2">Type 2</option>
-                                                                        <option value="opt3">Type 3</option>
-                                                                        <option value="opt4">Type 4</option>
-                                                                        <option value="opt5">Type 5</option>
-                                                                        <option value="opt6">Type 6</option>
-                                                                        <option value="opt7">Type 7</option>
-                                                                        <option value="opt8">Type 8</option>
-                                                                    </select>
-                                                                </div>
-                                                                <div class="col-sm-12 col-xl-3 m-b-30">
-                                                                    <h4 class="sub-title">Primary Select</h4>
+                                                                <div class="col-sm-12 col-xl-2 m-b-30">
+                                                                    <h4 class="sub-title">Status</h4>
                                                                     <select name="select" class="form-control form-control-primary">
-                                                                        <option value="opt1">Select One Value Only</option>
-                                                                        <option value="opt2">Type 2</option>
-                                                                        <option value="opt3">Type 3</option>
-                                                                        <option value="opt4">Type 4</option>
-                                                                        <option value="opt5">Type 5</option>
-                                                                        <option value="opt6">Type 6</option>
-                                                                        <option value="opt7">Type 7</option>
-                                                                        <option value="opt8">Type 8</option>
+                                                                        <option value="1">Ativa</option>
+                                                                        <option value="2">Inativa</option>
+                                                                        <option value="3">Esperando devolutiva</option>
                                                                     </select>
                                                                 </div>
                                                                 <div class="col-sm-12 col-xl-3 m-b-30">
-                                                                    <h4 class="sub-title">Success Select</h4>
-                                                                    <select name="select" class="form-control form-control-success">
-                                                                        <option value="opt1">Select One Value Only</option>
-                                                                        <option value="opt2">Type 2</option>
-                                                                        <option value="opt3">Type 3</option>
-                                                                        <option value="opt4">Type 4</option>
-                                                                        <option value="opt5">Type 5</option>
-                                                                        <option value="opt6">Type 6</option>
-                                                                        <option value="opt7">Type 7</option>
-                                                                        <option value="opt8">Type 8</option>
-                                                                    </select>
+                                                                    <h4 class="sub-title">Dt Inicio</h4>
+                                                                    <input id="dtNascimento" class="form-control date" data-mask="99/99/9999" type="text" />
                                                                 </div>
                                                                 <div class="col-sm-12 col-xl-3 m-b-30">
-                                                                    <h4 class="sub-title">Info Select</h4>
-                                                                    <select name="select" class="form-control form-control-info">
-                                                                        <option value="opt1">Select One Value Only</option>
-                                                                        <option value="opt2">Type 2</option>
-                                                                        <option value="opt3">Type 3</option>
-                                                                        <option value="opt4">Type 4</option>
-                                                                        <option value="opt5">Type 5</option>
-                                                                        <option value="opt6">Type 6</option>
-                                                                        <option value="opt7">Type 7</option>
-                                                                        <option value="opt8">Type 8</option>
+                                                                    <h4 class="sub-title">Dt Fim</h4>
+                                                                    <input id="dtNascimento" class="form-control date" data-mask="99/99/9999" type="text" />
+                                                                </div>
+                                                                <div class="col-sm-12 col-xl-4 m-b-30">
+                                                                    <h4 class="sub-title">Permite avaliações</h4>
+                                                                    <select name="select" class="form-control form-control-primary">
+                                                                        <option value="S">Sim</option>
+                                                                        <option value="N">Não</option>
                                                                     </select>
                                                                 </div>
                                                             </div>
