--- a/SisFiespApplication/Views/Avaliacoes/Edit.cshtml
+++ b/SisFiespApplication/Views/Avaliacoes/Edit.cshtml
@@ -124,7 +124,7 @@
                                                     <div class="slide"></div>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a class="nav-link" data-toggle="tab" href="#settings7" role="tab"><i class="icofont icofont-ui-settings"></i>Avaliação</a>
+                                                    <a class="nav-link" data-toggle="tab" href="#settings7" role="tab"><i class="icofont icofont-ui-settings"></i>Configuração</a>
                                                     <div class="slide"></div>
                                                 </li>
                                             </ul>
@@ -349,8 +349,28 @@
                                                             </div>
                                                             <div class="col-sm-8 user-detail">
                                                                 <div class="row">
-                                                                    <div class="col-sm-10">
-
+                                                                    <div class="col-sm-12 col-xl-2 m-b-30">
+                                                                        <h4 class="sub-title">Status</h4>
+                                                                        <select name="select" class="form-control form-control-primary">
+                                                                            <option value="1">Ativa</option>
+                                                                            <option value="2">Inativa</option>
+                                                                            <option value="3">Esperando devolutiva</option>
+                                                                        </select>
+                                                                    </div>
+                                                                    <div class="col-sm-12 col-xl-3 m-b-30">
+                                                                        <h4 class="sub-title">Dt Inicio</h4>
+                                                                        <input id="dtNascimento" class="form-control date" data-mask="99/99/9999" type="text" />
+                                                                    </div>
+                                                                    <div class="col-sm-12 col-xl-3 m-b-30">
+                                                                        <h4 class="sub-title">Dt Fim</h4>
+                                                                        <input id="dtNascimento" class="form-control date" data-mask="99/99/9999" type="text" />
+                                                                    </div>
+                                                                    <div class="col-sm-12 col-xl-4 m-b-30">
+                                                                        <h4 class="sub-title">Permite avaliações</h4>
+                                                                        <select name="select" class="form-control form-control-primary">
+                                                                            <option value="S">Sim</option>
+                                                                            <option value="N">Não</option>
+                                                                        </select>
                                                                     </div>
 
                                                                 </div>
