--- a/SisFiespApplication/Views/Avaliacoes/_partialAvaliacao.cshtml
+++ b/SisFiespApplication/Views/Avaliacoes/_partialAvaliacao.cshtml
@@ -40,7 +40,7 @@
                                                 <i class="icofont icofont-ui-user"></i><span>@avaliacaoDetalhe.EspecialistaNome</span>
                                             </a>
                                             <a data-toggle="modal" data-target="#large-Modal2" onclick="partialAnexos(@avaliacaoDetalhe.Codigo)">
-                                                <i class="icofont icofont-file-word"></i><span>Anexar arquivo</span>
+                                                <i class="icofont icofont-file-word"></i><span>Arquivos</span>
                                             </a>
                                             <p class="m-t-20"></p>
                                         </div>
