--- a/SisFiespApplication/Views/Avaliacoes/Index.cshtml
+++ b/SisFiespApplication/Views/Avaliacoes/Index.cshtml
@@ -74,7 +74,7 @@
                                                 @Html.DisplayFor(modelItem => item.EscolaNome)
                                             </td>
                                             <td>
-                                                @Html.DisplayFor(modelItem => item.DtCadastro)
+                                                @Html.Raw(item.DtCadastro.ToString("d"))
                                             </td>
                                             <td>
                                                 @{ if (item.Status == 1)
