--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -58,6 +58,17 @@
     <link rel="stylesheet" type="text/css" href="~/assets/pages/data-table/css/buttons.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="~/arquivos/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css">
 
+    <!-- Date-time picker css -->
+    <link rel="stylesheet" type="text/css" href="~/assets/pages/advance-elements/css/bootstrap-datetimepicker.css">
+    <!-- Date-range picker css  -->
+    <link rel="stylesheet" type="text/css" href="~/arquivos/bootstrap-daterangepicker/css/daterangepicker.css" />
+    <!-- Date-Dropper css -->
+    <link rel="stylesheet" type="text/css" href="~/arquivos/datedropper/css/datedropper.min.css" />
+    <!-- Color Picker css -->
+    <link rel="stylesheet" type="text/css" href="~/arquivos/spectrum/css/spectrum.css" />
+    <!-- Mini-color css -->
+    <link rel="stylesheet" type="text/css" href="~/arquivos/jquery-minicolors/css/jquery.minicolors.css" />
+
     <!-- Required Jquery -->
     <script type="text/javascript" src="~/arquivos/jquery/js/jquery.min.js"></script>
     <script type="text/javascript" src="~/arquivos/jquery-ui/js/jquery-ui.min.js"></script>
@@ -137,6 +148,22 @@
     <!-- Calender css -->
     <link rel="stylesheet" type="text/css" href="~/arquivos/fullcalendar/css/fullcalendar.css">
     <link rel="stylesheet" type="text/css" href="~/arquivos/fullcalendar/css/fullcalendar.print.css" media='print'>
+
+    <!-- Bootstrap date-time-picker js -->
+    <script type="text/javascript" src="~/assets/pages/advance-elements/moment-with-locales.min.js"></script>
+    <script type="text/javascript" src="~/arquivos/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
+    <script type="text/javascript" src="~/assets/pages/advance-elements/bootstrap-datetimepicker.min.js"></script>
+    <!-- Date-range picker js -->
+    <script type="text/javascript" src="~/arquivos/bootstrap-daterangepicker/js/daterangepicker.js"></script>
+    <!-- Date-dropper js -->
+    <script type="text/javascript" src="~/arquivos/datedropper/js/datedropper.min.js"></script>
+    <!-- Color picker js -->
+    <script type="text/javascript" src="~/arquivos/spectrum/js/spectrum.js"></script>
+    <script type="text/javascript" src="~/arquivos/jscolor/js/jscolor.js"></script>
+    <!-- Mini-color js -->
+    <script type="text/javascript" src="~/arquivos/jquery-minicolors/js/jquery.minicolors.min.js"></script>
+
+    <script type="text/javascript" src="~/assets/pages/advance-elements/custom-picker.js"></script>
 
 </head>
 
