--- a/SisFiespApplication/Views/Agenda/Index.cshtml
+++ b/SisFiespApplication/Views/Agenda/Index.cshtml
@@ -103,6 +103,11 @@
 <!-- calender js -->
 <script type="text/javascript" src="~/arquivos/moment/js/moment.min.js"></script>
 <script type="text/javascript" src="~/arquivos/fullcalendar/js/fullcalendar.min.js"></script>
-<!--<script type="text/javascript" src="~/assets/pages/full-calender/calendar.js"></script>-->
 
+
+<!--<script type="text/javascript" src="~/assets/pages/full-calender/calendar.js"></script>-->
+<script type="text/javascript" src="~/assets/pages/full-calender/lib/main.min.js"></script>
+<script type="text/javascript" src="~/assets/pages/full-calender/lib/locales/pt-br.js"></script>
 <script src="~/jsView/agenda.js" asp-append-version="true"></script>
+@*<script type="text/javascript" src="~/assets/pages/full-calender/lib/main.js"></script>
+<script type="text/javascript" src="~/assets/pages/full-calender/lib/main.min.js"></script>*@
