--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -165,6 +165,10 @@
 
     <script type="text/javascript" src="~/assets/pages/advance-elements/custom-picker.js"></script>
 
+
+    @*<script type="text/javascript" src="~/assets/pages/full-calender/locales-all.js"></script>
+    <script type="text/javascript" src="~/assets/pages/full-calender/pt-br.js"></script>*@
+
 </head>
 
 <body>
